syntax = "proto3";

package com.brianphiri.grpc;

option java_multiple_files = true;

message PaymentRequest {
    string studentNumber = 1;
    string phoneNumber = 2;
    string amount = 3;
}

message MpesaRequest {
    string phoneNumber = 1;
    string amount = 2;
}

message PaymentResponse {}

service PaymentService {
    rpc makePayment (PaymentRequest) returns (PaymentResponse);
    rpc sendToMpesa (MpesaRequest) returns (PaymentResponse);
}